--- a/_posts/0000-01-02-tcwave.md
+++ b/_posts/0000-01-02-tcwave.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide"
 ---
-This is a test
+This is a test, 2nd step
+
 Use the left arrow to go back!
